Fixed OAuth redirect for production